v0.11
	* ADD : french translation
	* ADD : Merkaartor document (*.mdc)
	* FIX : Apply button in Preferences now updates the main window immediately
	* FIX : if a feature contains a node more than once, if the node is deleted, only the first occurence is removed
	* ADD : merge nodes function
	* FIX : don't ignore "width" tags on export
	* ADD : translation capabilities
	* FIX : Misaligned background after view resize
	* FIX : clipping problem with selected features during resize
	* FIX : NMEA import timestamps
	* FIX : don't force to enter an u/p for download
	* FIX : right background column not drawn in large resolution
v0.10
	* ADD : warn for older versions of Qt
	* ADD : save mainwindow layout status (by Daniel van Gerpen)
	* ADD : improved tag selection mechanism
	* ADD : per-layer transparency
	* ADD : background color chooser
	* FIX : redraw view when joining roads
	* ADD : generalization of Tile servers (OSM is now part of that group)
	* ADD : shift-click also prevents roads from selected (previously only alt-click)
	* ADD : configurable projection type (allow custom zoom in "Merkaartor" projection, for background also)
	* ADD : configurable zoom factors
	* ADD : Background tiles caching
	* ADD : Initial track to road
	* ADD : Initial osmarender rendering
	* FIX : decrease memory usage when importing OSM
	* FIX : increase snap update speed
	* ADD : ability to load tracks from the command line (by Daniel van Gerpen)
	* ADD : Mapnik-lookalike style (by Colin Marquardt and Andreas Laas)
	* ADD : ability to set default style at startup
	* FIX : Remove compile warnings and c-style casts (by Daniel van Gerpen)
	* ADD : "created_by" to new features
	* ADD : navigation: view -> bookmark + add/remove
	* FIX : warn when OSM userid/password not set
	* ADD : Export viewport to OSM
	* FIX : crash when splitting roads (by Daniel van Gerpen)
	* FIX : various memory leaks and clean ups (by Daniel van Gerpen)