@@ -1,4 +1,5 @@
 v0.11
+	* ADD : delete layer command
 	* ADD : french translation
 	* ADD : Merkaartor document (*.mdc)
 	* FIX : Apply button in Preferences now updates the main window immediately
